1999-12-15  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* added two IETF MIB modules.

	* fixed a recent bug on MODULE-COMPLIANCE statement parsing.

1999-12-14  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.1.8.tar.gz: released version 0.1.8.

	* replaced updated SMIng I-D. updated README. minor cleanups.

	* tools/*.1.in: updated option lists in man pages.
	
	* lib/smi.c (smiReadConfig): changed config file syntax.

	* lib/error.c: moved fatal errors to level -1 and non-error
	output (statistics) to level 0.

	* lib/data.c (loadModule): fixed lex recursion level of
	statistics output.

	* mibs/ietf/RFC1158-MIB (IpNetToMediaEntry): fixed typos in
	original MIB.

1999-12-13  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: fixed wrong complaints about imported but
	unused identifiers in MODULE sections of MODULE-COMPLIANCE
	statements.

	* lib/error.c (errorSeverity): error severities can now be
	changed, e.g. by smilint `-i error-name-prefix options or config
	file `hide error-name-prefix commands, the severity of all errors
	with names prefixed by the pattern is raised to 9. this means
	they only show up at error level 9. Note, that not yet all errors
	have names, since it's not easy to find explanatory names with
	grouping prefixes.

	* lib/smi.c: new config file commands: `path' prepends an element
	to the module search path. `level' sets the error level.
	
	* lib/parser-smi.y: Opaque size restrictions are now allowed.
	Warning about Opaque usage in SMIv2 modules.

1999-12-10  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/smi.c (smiReadConfig): a global and a user configuration
	file are now read, if existent: /usr/local/etc/smi.conf and
	~/.smirc. The first and only directive `load <module>' may be
	used to preload any MIB modules. This feature still needs some
	enhancements, like per application directives.

1999-11-01  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/smidump.c: Again, Juergen Schoenwaelder contributed